fixed navbar z-index

--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,7 @@ body {
   position: fixed;
   justify-content: space-between;
   align-items: center;
+  z-index: 2;
 }
 #home {
   background-image: url("../images/home-background.jpg");
